Remove unselectable behavior for inputs (bug on Safari)

--- a/app/src/style.less
+++ b/app/src/style.less
@@ -84,14 +84,6 @@ body {
 .concept_nav_bar {
     max-width: 800px;
     margin: 10px auto 10px auto;
-
-    input {
-        // Prevent text selection when doubleclicking other DOM elements.
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
 }
 
 .block-1 {
